--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ a:visited {
 p {
   color: white;
   font-size: calc(1rem + 1vw);
-  font-weight: 300;
+  font-weight: 200;
 }
 
 li {
@@ -321,7 +321,7 @@ i {
 
 .header__logo__content--content--link:link::before,
 .header__logo__content--content--link:visited::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -341,15 +341,152 @@ i {
 /***************************************** BOOKING CONTENT SECTION *****************************************/
 
 #booking-content {
-  background-color: var(--color-secondary);
   grid-column: center-start / col-end 6;
+  padding: var(--padding-section);
+
+  display: grid;
+  grid-template-rows: repeat(3, max-content);
+  gap: 2vh;
+}
+
+.booking-content__title {
+  font-size: var(--font-size-title);
+  padding: 0 2rem 1rem;
+  font-weight: 300;
+  position: relative;
+}
+
+.booking-content__title::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 15%;
+  width: 30%;
+  height: 0.2rem;
+
+  background-color: var(--color-secondary);
+}
+
+.booking-content__paragraph {
+  padding: 2rem;
+}
+
+#booking-content p,
+.booking-date__contact p {
+  color: var(--color-primary);
+}
+
+.booking-content__icons {
+  margin-left: 2rem;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 2rem;
+}
+
+.booking-content__icons--weather,
+.booking-content__icons--time {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.booking-content__icons--weather i,
+.booking-content__icons--time i {
+  padding-right: 4rem;
 }
 
 /***************************************** BOOKING DATE SECTION *****************************************/
 
 #booking-date {
-  background-color: var(--color-tertiary);
   grid-column: col-start 7 / center-end;
+  padding: var(--padding-section);
+
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.booking-date__schedule {
+  display: flex;
+  gap: 2rem;
+}
+
+.booking-date__schedule--arrival,
+.booking-date__schedule--departure,
+.booking-date__schedule--guests {
+  display: flex;
+  flex-direction: column;
+  gap: 3vh;
+}
+
+.booking-date__schedule--arrival h5,
+.booking-date__schedule--departure h5,
+.booking-date__schedule--guests h5 {
+  font-size: calc(1.2rem + 1vw);
+  text-align: center;
+  padding: 0.5rem;
+}
+
+.booking-date__schedule--arrival div,
+.booking-date__schedule--departure div,
+.booking-date__schedule--guests div {
+  background-color: var(--color-secondary);
+  padding: 2rem 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  position: relative;
+}
+
+/* arrow */
+
+.booking-date__schedule--arrival div::before,
+.booking-date__schedule--departure div::before,
+.booking-date__schedule--guests div::before {
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  border-width: 1.5rem;
+  margin-left: -1.5rem;
+  border-style: solid;
+  border-color: transparent transparent var(--color-secondary) transparent;
+}
+
+.booking-date__schedule--arrival div p:nth-last-of-type(2),
+.booking-date__schedule--departure div p:nth-last-of-type(2),
+.booking-date__schedule--guests div p:nth-last-of-type(2) {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.booking-date__contact {
+  align-self: end;
+}
+
+.booking-date__contact--link:link,
+.booking-date__contact--link:visited {
+  background-color: var(--color-secondary);
+  color: white;
+  transition: all var(--transition-duration) ease-in-out;
+}
+
+.booking-date__contact--link:hover,
+.booking-date__contact--link:active {
+  color: var(--color-secondary);
+  background-color: white;
+  border: 0.1rem solid var(--color-secondary);
+}
+
+.booking-date__contact p:first-of-type {
+  margin-top: 4rem;
+}
+
+.booking-date__contact p:first-of-type,
+.booking-date__contact p:nth-of-type(2),
+.booking-date__contact p:nth-of-type(3) {
+  font-size: 2rem;
 }
 
 /*****************************************  VILLAS SECTION *****************************************/
@@ -415,9 +552,104 @@ i {
   grid-column: center-start / center-end;
 }
 
-/*****************************************  FEATURES TEXT SECTION *****************************************/
+/*****************************************  FOOTER SECTION *****************************************/
 
 #footer {
   background-color: var(--color-primary);
   grid-column: container-start / container-end;
+}
+
+/*****************************************  MEDIA QUERIES *****************************************/
+/*****************************************  1000px *****************************************/
+
+@media screen and (max-width: 1000px) {
+  a:link,
+  a:visited {
+    font-size: calc(1rem + 1vw);
+  }
+}
+
+/*****************************************  800px *****************************************/
+
+@media screen and (max-width: 800px) {
+  #booking-content,
+  #booking-date {
+    padding: 4vh 3vw;
+    grid-column: center-start / center-end;
+  }
+
+  #booking-date {
+    grid-row-gap: 7vh;
+  }
+
+  .booking-content__title {
+    text-align: center;
+  }
+
+  .booking-content__title::after {
+    width: 20%;
+    left: 40%;
+  }
+
+  .booking-date__schedule {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .booking-date__schedule--arrival div,
+  .booking-date__schedule--departure div,
+  .booking-date__schedule--guests div {
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .booking-date__schedule div p {
+    font-size: 2rem;
+    font-weight: 400;
+  }
+}
+/*****************************************  700px *****************************************/
+
+@media screen and (max-width: 700px) {
+  .booking-date__schedule--arrival div,
+  .booking-date__schedule--departure div,
+  .booking-date__schedule--guests div {
+    flex-direction: column;
+    padding: 4rem 4rem;
+  }
+
+  #booking-date {
+    grid-template-rows: repeat(2, max-content);
+  }
+}
+
+/*****************************************  600px *****************************************/
+
+@media screen and (max-width: 600px) {
+  .header__logo__content--content--paragraph {
+    font-size: 2rem;
+  }
+
+  .booking-content__paragraph {
+    font-size: 1.5rem;
+  }
+  
+  .booking-date__contact {
+    padding: 0 2rem 0;
+  }
+}
+/*****************************************  410px *****************************************/
+
+@media screen and (max-width: 410px) {
+  .booking-date__schedule--arrival div,
+  .booking-date__schedule--departure div,
+  .booking-date__schedule--guests div {
+    flex-direction: row;
+  }
+
+  .booking-date__schedule--guests div {
+    padding: 4rem 4.8rem;
+  }
+
 }
