--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ i {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 6;
 }
 
 .header__main-nav input[type='checkbox'] {
@@ -492,36 +492,241 @@ i {
 /*****************************************  VILLAS SECTION *****************************************/
 
 #villas {
-  background-color: var(--color-primary);
   grid-column: container-start / container-end;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+  grid-gap: 2rem;
+}
+
+div[class^='villas'] {
+  padding: 2rem;
+  background-position: center;
+  background-size: cover;
+  transition: transform var(--transition-duration) ease-in-out;
+}
+
+div[class^='villas']:hover,
+div[class^='villas']:active {
+  transform: scale(1.05);
+}
+
+div[class^='villas'] h2[class^='villas'] {
+  font-size: var(--font-size-title);
+  padding: 0 2rem 1rem 0;
+  font-weight: 400;
+  color: white;
+  text-transform: uppercase;
+}
+
+div[class^='villas'] p[class^='villas'] {
+  font-size: 2rem;
+  margin: 1.5rem 0 4rem 0;
+  color: white;
+  font-weight: 500;
+}
+
+div[class^='villas'] a[class^='villas']:link,
+div[class^='villas'] a[class^='villas']:visited {
+  display: inline-block;
+  margin-bottom: 2rem;
+  background-color: white;
+  color: var(--color-primary);
+  z-index: 2;
+  overflow: hidden;
+}
+
+div[class^='villas'] a[class^='villas']:hover,
+div[class^='villas'] a[class^='villas']:active {
+  color: white;
+}
+
+div[class^='villas'] a[class^='villas']:link::before,
+div[class^='villas'] a[class^='villas']:visited::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 0%;
+  z-index: -1;
+  background-color: var(--color-secondary);
+  transition: height var(--transition-duration) ease-in-out;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+div[class^='villas']:nth-child(n) a[class^='villas']:link::before,
+div[class^='villas']:nth-child(n) a[class^='villas']:visited::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+div[class^='villas']:nth-child(2n) a[class^='villas']:link::before,
+div[class^='villas']:nth-child(2n) a[class^='villas']:visited::before {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+div[class^='villas'] a[class^='villas']:hover::before,
+div[class^='villas'] a[class^='villas']:active::before {
+  height: 400%;
+}
+
+.villas__villa-1 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-dark)
+    ),
+    url('img/Villas/villa-1.jpg');
+}
+.villas__villa-2 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-dark)
+    ),
+    url('img/Villas/villa-2.jpg');
+}
+.villas__villa-3 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-dark)
+    ),
+    url('img/Villas/villa-3.jpg');
+}
+.villas__villa-4 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-dark)
+    ),
+    url('img/Villas/villa-4.jpg');
+}
+.villas__villa-5 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-dark)
+    ),
+    url('img/Villas/villa-5.jpg');
+}
+.villas__villa-6 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-dark)
+    ),
+    url('img/Villas/villa-6.jpg');
 }
 
 /*****************************************  MOTTO SECTION *****************************************/
 
 #motto {
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
   grid-column: container-start / container-end;
+
+  padding: 10vh;
+}
+
+.motto__content {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.motto__content--title {
+  font-size: var(--font-size-title);
+  padding: 0 2rem 1rem;
+  font-weight: 300;
+  color: white;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+  position: relative;
+}
+
+.motto__content--title::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 45%;
+  width: 10%;
+  height: 0.2rem;
+  background-color: white;
 }
 
 /*****************************************  EVENTS CONTENT SECTION *****************************************/
 
 #events-content {
-  background-color: var(--color-tertiary);
   grid-column: container-start / col-end 9;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#events-content > div {
+  padding: var(--padding-section);
+  display: flex;
+  flex-direction: column;
+  gap: 4vh;
+}
+
+#events-content > div:first-child {
+  background: linear-gradient(
+      var(--color-tertiary-m-light),
+      var(--color-tertiary-m-light)
+    ),
+    url('img/Events/beach-party.jpg');
+  border-right: solid 0.2rem var(--color-tertiary);
+}
+
+#events-content > div:last-child {
+  background: linear-gradient(
+      var(--color-tertiary-m-light),
+      var(--color-tertiary-m-light)
+    ),
+    url('img/Events/culture-discovery.jpg');
+  border-left: solid 0.2rem var(--color-tertiary);
+}
+
+#events-content > div:first-child,
+#events-content > div:last-child {
+  background-size: cover;
+  background-position: center;
+}
+
+h2[class*='title'] {
+  font-size: var(--font-size-title);
+  font-weight: 400;
+  color: white;
+}
+
+p[class*='paragraph'] {
+  color: white;
+  font-weight: 500;
 }
 
 /*****************************************  EVENTS TEXT SECTION *****************************************/
 
 #events-text {
-  background-color: var(--color-primary);
+  background-color: var(--color-tertiary);
   grid-column: col-start 10 / center-end;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.events-text__content--title {
+  transform: rotate(90deg);
+  letter-spacing: 0.2rem;
 }
 
 /*****************************************  GALLERY TEXT SECTION *****************************************/
 
 #gallery-text {
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
   grid-column: center-start / col-end 1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery-text__content--title {
+  transform: rotate(-90deg);
+  letter-spacing: 0.2rem;
 }
 
 /*****************************************  GALLERY CAROUSEL SECTION *****************************************/
@@ -529,6 +734,7 @@ i {
 #gallery-carousel {
   background-color: var(--color-tertiary);
   grid-column: col-start 2 / container-end;
+  height: 400px;
 }
 
 /*****************************************  FEATURES CONTENT SECTION *****************************************/
@@ -608,6 +814,10 @@ i {
     font-size: 2rem;
     font-weight: 400;
   }
+
+  #villas {
+    grid-gap: 0;
+  }
 }
 /*****************************************  700px *****************************************/
 
@@ -631,17 +841,55 @@ i {
     font-size: 2rem;
   }
 
-  .booking-content__paragraph {
+  .booking-content__paragraph,
+  div[class^='villas'] p[class^='villas'],
+  .motto__content--paragraph,
+  #events-content > div p[class*='paragraph'],
+  #features-content > div p[class*='paragraph'] {
     font-size: 1.5rem;
   }
-  
+
+  #events-content {
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  }
+  #events-content,
+  #gallery-carousel,
+  #features-content {
+    grid-column: center-start / center-end;
+  }
+
+  #events-content > div:first-child,
+  #events-content > div:last-child,
+  #features-content > div:first-child,
+  #features-content > div:last-child {
+    border: none;
+  }
+
   .booking-date__contact {
     padding: 0 2rem 0;
   }
-}
-/*****************************************  410px *****************************************/
 
-@media screen and (max-width: 410px) {
+  div[class^='villas'] p[class^='villas'] {
+    margin: 1.5rem 0 4rem 0;
+  }
+
+  #motto {
+    padding: 5rem 3rem;
+  }
+
+  .motto__content {
+    width: 90%;
+  }
+
+  #events-text,
+  #gallery-text,
+  #features-text {
+    display: none;
+  }
+}
+/*****************************************  411px *****************************************/
+
+@media screen and (max-width: 411px) {
   .booking-date__schedule--arrival div,
   .booking-date__schedule--departure div,
   .booking-date__schedule--guests div {
@@ -652,4 +900,7 @@ i {
     padding: 4rem 4.8rem;
   }
 
+  #villas {
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  }
 }
