--- a/style.css
+++ b/style.css
@@ -732,9 +732,85 @@ p[class*='paragraph'] {
 /*****************************************  GALLERY CAROUSEL SECTION *****************************************/
 
 #gallery-carousel {
-  background-color: var(--color-tertiary);
   grid-column: col-start 2 / container-end;
-  height: 400px;
+  height: 90vh;
+  overflow: hidden;
+  border: 0.2rem solid var(--color-secondary);
+  position: relative;
+}
+
+.gallery-carousel__img-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.gallery-carousel__img-container--list {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 2s ease-in-out;
+}
+
+.gallery-carousel__img-container--list__item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.gallery-carousel__img-container--list__item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.gallery-carousel__btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.gallery-carousel__btn--right {
+  right: 0;
+}
+
+.gallery-carousel__nav {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 80%;
+  transform: translateX(-50%);
+  margin-bottom: 2rem;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery-carousel__nav--btn {
+  background-color: var(--color-secondary);
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+}
+
+.current--img {
+  background-color: var(--color-primary);
+}
+
+.hidden {
+  display: none;
 }
 
 /*****************************************  FEATURES CONTENT SECTION *****************************************/
@@ -832,6 +908,13 @@ p[class*='paragraph'] {
   #booking-date {
     grid-template-rows: repeat(2, max-content);
   }
+
+  .gallery-carousel__nav {
+    flex-wrap: wrap;
+    justify-content: flex-start; 
+    gap: 2.5rem;
+    height: 12%;
+  }
 }
 
 /*****************************************  600px *****************************************/
@@ -886,6 +969,12 @@ p[class*='paragraph'] {
   #features-text {
     display: none;
   }
+
+  .gallery-carousel__btn i {
+    font-size: 5rem;
+  }
+
+  
 }
 /*****************************************  411px *****************************************/
 
@@ -903,4 +992,6 @@ p[class*='paragraph'] {
   #villas {
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   }
+
+  
 }
